# TM-RAG

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
app/api/: deps.py  middleware.py
app/api/v1/routes/: chat.py  health.py
app/core/: config.py  exceptions.py  logging.py
app/models/: chat.py  common.py
app/pipelines/: agentic_pipeline.py  crag_pipeline.py  ingest_pipeline.py  prompts.py
app/repositories/: __init__.py  base.py  faiss_repository.py  pgvector_repository.py
app/services/: intent_classifier.py  llm_service.py  rag_service.py  retriever_service.py
app/utils/: text.py
docs/: backend-api-contract.md
tests/: conftest.py
tests/integration/: test_chat_endpoint.py  test_health_endpoint.py
tests/unit/: test_agentic_pipeline.py  test_crag_pipeline.py  test_ingest_pipeline.py  test_intent_classifier.py  test_llm_service.py  test_rag_service.py  test_retriever_service.py  test_text.py
